oc/stage/frontend-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: frontend-stage
  namespace: fec-ef-app
  labels:
    app: frontend
    env: stage
spec:
  strategy:
    type: Rolling
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - frontend
        from:
          kind: ImageStreamTag
          namespace: fec-ef-app
          name: 'fec-ef-app-frontend:stage'
  replicas: 1
  test: false
  selector:
    app: frontend
    env: stage
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
        env: stage
    spec:
      containers:
        - name: frontend
          command:
            - ng
            - serve
            - '--host'
            - 0.0.0.0
            - '--disableHostCheck'
            - '--env'
            - stage
          image: >-
            salientcrgt/fec-ef-app-frontend:stage
          ports:
            - containerPort: 4200
              protocol: TCP
          resources:
            limits:
              memory: 2048Mi 
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
