oc/stage/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
    env: stage
  name: fec-ef-app-backend-stage
  namespace: fec-ef-app
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
    env: stage
  sessionAffinity: None
  type: ClusterIP
