oc/stage/postgresql-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql
    env: stage
  name: postgresql
  namespace: fec-ef-app
spec:
  ports:
    - name: postgresql-stage
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: postgresql
    app: postgresql
    env: stage
  sessionAffinity: None
  type: ClusterIP
