oc/stage/backend-route.yml
apiVersion: v1
kind: Route
metadata:
  name: backend
  namespace: fec-ef-app
spec:
  host: stage-backend-fec-ef-app.b9ad.pro-us-east-1.openshiftapps.com
  path: /
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: fec-ef-app-backend-stage
    weight: 100
