oc/stage/frontend-route.yml
apiVersion: v1
kind: Route
metadata:
  name: frontend
  namespace: fec-ef-app
spec:
  host: stage-fecportal-fec-ef-app.b9ad.pro-us-east-1.openshiftapps.com
  path: /
  port:
    targetPort: node
  to:
    kind: Service
    name: fec-ef-app-frontend-stage
    weight: 100
